--- a/Trabajo_pagina_web/inicio.css
+++ b/Trabajo_pagina_web/inicio.css
@@ -7,14 +7,17 @@
 body{
     background-color: rgb(34, 39, 37);
     background-color: #030303;
-    background-color: #19171b;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
-    font-size: 16px;
+    background: url(Img/imagen_fondito.jpg) no-repeat  ;
+    /*background-color: #19171b;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='105' viewBox='0 0 80 105'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='death-star' fill='%23540606' fill-opacity='0.4'%3E%3Cpath d='M20 10a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm15 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zM20 75a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zm30-65a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm0 65a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zM35 10a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zM5 45a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zm60 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
+    background-size: cover;
+    background-position: center ;
+    font-size: 19px;
     font-family: 'Oswald', sans-serif;
 }
 
 a{
-    color: aliceblue;
+    color: rgb(201, 208, 214);
     text-decoration: none;
 }
 
@@ -23,6 +26,99 @@ ul{
 }
 
 .container{
-    margin: auto;
     width: 90%;
+    margin: auto;
+}
+
+/* navigation */
+.nav_main{
+    font-size: 17px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    padding: 20px 0;
+}
+
+.nav-brand {
+    width: 50px;
+
+}
+
+/* nav left */
+.nav_main ul {
+    display: flex;
+}
+
+.nav_main ul li{
+    padding: 10px;
+}
+
+.nav_main ul li a{
+    padding: 10px;
+}
+
+.nav_main ul li a:hover {
+    border-bottom: 2px solid rgb(224, 222, 228) ;
+}
+
+.nav_main ul.nav_menu {
+    flex: 1;
+    margin-left: 20px;
+}
+
+hr{
+    margin: 5px 0;
+}
+
+.showcase{
+    width: 100%;
+    height: 550px;
+    color: rgb(201, 208, 214);
+    background: url(Img/fondo-aterdacer.jpg) no-repeat center center/cover;
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    margin-bottom: 35px;
+
+}
+
+.btn{
+    cursor: pointer;
+    display: inline-block;
+    border: 0;
+    font-weight: bold;
+    padding: 10px 20px;
+    background-color: #19171b;
+    color: aliceblue;
+    font-size: 15px;
+    border: 1px solid #ffff;
+    margin: 10px 0;
+}
+
+.btn:hover {
+    opacity: .5;
+    
+    background-color: rgb(76, 80, 77);
+}
+
+.showcase  h2 ,
+.showcase p {
+    margin-bottom: 10px ;
+}
+
+.news-cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    color: rgb(162, 165, 162);
+    gap: 25px;
+    margin: 10px 0;
+}
+
+.news-cards img {
+    width: 100%;
+    height: 180px;
+    
 }
