--- a/Trabajo_pagina_web/inicio.css
+++ b/Trabajo_pagina_web/inicio.css
@@ -7,7 +7,7 @@
 body{
     background-color: rgb(34, 39, 37);
     background-color: #030303;
-    background: url(Img/imagen_fondito.jpg) no-repeat  ;
+    background: url(Img/fondo8.jpg) no-repeat  ;
     /*background-color: #19171b;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='105' viewBox='0 0 80 105'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='death-star' fill='%23540606' fill-opacity='0.4'%3E%3Cpath d='M20 10a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm15 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zM20 75a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zm30-65a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm0 65a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zM35 10a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zM5 45a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zm60 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
     background-size: cover;
@@ -41,7 +41,8 @@ ul{
 }
 
 .nav-brand {
-    width: 50px;
+    width: 80px;
+    
 
 }
 
@@ -122,3 +123,73 @@ hr{
     height: 180px;
     
 }
+
+.news-cards h3 {
+    font-size: 25px;
+    margin: 10px 0;
+    color: rgb(201, 208, 214);
+}
+
+.news-cards a {
+    padding: 10px 0;
+    color: aliceblue;
+    text-transform: uppercase;
+    display: inline-block;
+    font-weight: bold;
+    font-size: 15px;
+
+}
+
+.news-cards a:hover{
+    text-decoration: underline;
+}
+
+/* CARDS BANNER ONE*/
+
+.cards-banner-one {
+    width: 100%;
+    height: 350px;
+    background: url(Img/fondo9.jpg) no-repeat center center/cover ;
+    margin-bottom: 40px;
+    color: rgb(162, 165, 162);
+}
+
+.cards-banner-one .content {
+    width: 40%;
+    padding: 90px 0 0 30px;
+}
+
+.cards-banner-one h2 {
+    color: aliceblue;
+    
+}
+
+.cards-banner-one p {
+    color:rgb(182, 217, 248);
+}
+
+.cards-banner-one p,
+.cards-banner-one h2 {
+    margin: 10px 0 20px 0;
+}
+
+/* SOCIAL */
+
+
+.social{
+    margin: 50px;
+}
+
+.social p {
+    color: aliceblue;
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 20px;   
+}
+
+.links{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
